<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_lab1"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_lab_1" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_lab_2" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_lab_3" />

    <item
        android:id="@+id/navigation_home1"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_lab_4" />

    <item
        android:id="@+id/navigation_dashboard1"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_lab_5" />

</menu>
